--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
     <link rel="stylesheet" href="/CSS/main.css">
 </head>
 <body>
+
+    <main class="container">
+        <section class="community padding">
+            <h2 class="community__title">Join our community</h2>
+            <h3 class="community__sub">30-day, hassle-free money back guarantee</h3>
+            <p class="community__body">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+        </section>
+
+        <section class="subscription padding">
+            <h2 class="subscription__title">Monthly Subscription</h2>
+            <h1 class="subscription__price">$29 <span>per month</span></h1>
+            <h3 class="subscription__sub">Full access for less than $1 a day</h3>
+            <button class="btn">Sign Up</button>
+        </section>
+
+        <section class="why padding">
+            <h2 class="why__title">Why Us</h2>
+            <ul class="why__list">
+                <li class="list__item">Tutorials by industry experts</li>
+                <li class="list__item">Peer &amp; expert code review</li>
+                <li class="list__item">Coding exercises</li>
+                <li class="list__item">Access to our GitHub repos</li>
+                <li class="list__item">Community forum</li>
+                <li class="list__item">Flashcard decks</li>
+                <li class="list__item">New videos every week</li>
+            </ul>
+
+        </section>
+    </main>
     
 </body>
 </html>
